Changes card button padding and font-size To stop button from overflowing from card

--- a/css/portal.css
+++ b/css/portal.css
@@ -81,10 +81,10 @@
 
 .card-body a{
     font-weight: 700;
-    font-size: 1.4rem;
+    font-size: 12px;
     line-height: 2rem;
     border-radius:4px;
-    padding:1.5rem 3rem;
+    padding:1rem 2rem;
     width:auto;
     margin:0 auto;
 
